--- a/style.css
+++ b/style.css
@@ -1,81 +1,163 @@
 html {
-    text-size-adjust;
+    text-size-adjust: 100%;
 }
-
-.body {
+@media screen and (max-width: 991px) {
+    .center-content {
+        max-width: 728px;
+    }
+}
+body {
     font-family: Arial, sans-serif;
     font-size: 18px;
     line-height: 25px;
+    color: #C5D86D;
 }
 
-section {
+section div {
     display: block;
+    margin: 0;
 }
-
-div {
-    display: block;
-}
-
-.column {
-    gap: 16px;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: 1fr;
-    grid-auto-columns: 1fr;
-    display: grid;
-}
-
 h1 {
-    margin: 0.67am 0px;
+    margin-top: 0;
 }
-
 p {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    unicode-bidi: isolate;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
-.intro {
-    background-color: rgb(34, 3, 31);
-    margin-top: 0px;
+.custom-bg-nav {
+    background-color: #C5D86D !important;
+  }
+.navbar-brand {
+    color: black;
+}
+
+.nav-link {
+    color: black;
 }
 
 .container {
-    margin-top: 0px;
     padding-top: 100px;
     padding-bottom: 100px;
 }
-@media screen and (max-width: 991px) {
-    .w-layout-blockcontainer {
-        max-width: 728px;
-    }
-}
-.w-layout-blockcontainer {
+.center-content {
     max-width: 940px;
     margin-left: auto;
     margin-right: auto;
     display: block;
 }
-
-.w-container {
-    max-width: 940px;
-    margin-left: auto;
-    margin-right: auto;
+.section-spacing {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
-.w-container::after {
-    clear: both;
-}
-
-.w-container::before, .w-container::after {
+/* .col-6 {
+    width: 50%;
+} */
+/* .col {
+    float: left;
+    width: 100%;
+    min-height: 1px;
+    padding-left: 10px;
+    padding-right: 10px;
+} */
+/* .row::before, .row::after {
     content: " ";
     grid-area: 1 / 1 / 2 / 2;
     display: table;
 }
 
-#photo {
+.row::after {
+    clear: both;
+}
+
+.row::before, .row::after {
+    content: " ";
+    grid-area: 1 / 1 / 2 / 2;
+    display: table;
+} */
+
+.dark-bg-title {
+    color: #C5D86D;
+    font-size: 65px;
+    line-height: 44px;
+    font-weight: bold;
+
+    padding-bottom: 10px;
+    
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.dark-bg-sub {
+    color: #CCD69F;
+    font-family: Arial, sans-serif;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    
+    margin-top: 20px;
+}
+.dark-bg-text {
+    color: #CCD69F;
+    font-size: 18px;
+}
+.light-bg-title {
+    color: #141B0B;
+    font-size: 65px;
+    line-height: 44px;
+    font-weight: bold;
+    line-height:70px;
+
+    padding-bottom: 10px;
+
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.light-bg-sub {
+    color: #141B0B;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+
+    margin-top: 20px;
+}
+.light-bg-text {
+    color: #141B0B;
+    font-size: 18px;
+    line-height: 25px;
+
+    padding-top: 10px;
+
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+
+
+.intro {
+    background-color: #141B0B;
+}
+#greeting {
+    color: #C5D86D;
+    font-size: 88px;
+    line-height: 100px;
+    font-weight: bold;
+    letter-spacing: 1px;
+
+    margin-top: 50px;
+    margin-bottom: 10px;
+
+    padding-top: 100px;
+}
+.left-intro {
+    margin-left: 80px;
+}
+.right-intro {
     box-sizing: border-box;
     vertical-align: middle;
     max-width: 100%;
@@ -83,123 +165,63 @@ p {
     overflow-clip-margin: content-box;
     overflow: clip;
 }
-
-.w-row::before, .w-row::after {
-    content: " ";
-    grid-area: 1 / 1 / 2 / 2;
-    display: table;
-}
-
-.w-row::after {
-    clear: both;
-}
-
-.w-row::before, .w-row::after {
-    content: " ";
-    grid-area: 1 / 1 / 2 / 2;
-    display: table;
-}
-
-.w-col-6 {
-    width: 50%;
-}
-
-.w-col {
-    float: left;
-    width: 100%;
-    min-height: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.image-container {
+#photo {
+    vertical-align: middle;
     padding-left: 60px;
+    position: relative;
+    bottom: 50px;
+    display: inline-block;
+
+    max-width: 100%;
+    width: 475px;
+    height: 800px;
+
+    overflow-clip-margin: content-box;
+    overflow: clip;
 }
 
-.w-layout-blockcontainer {
-    max-width: 940px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
+
 
 .education {
-    background-color: rgb(242, 183, 198);
-    padding-top: 100px;
-    padding-bottom: 100px;
+    background-color: #CCD69F;
 }
-
-
-.light-bg-title {
-    color: rgb(34, 3, 31);
-    padding-bottom: 10px;
-    font-size: 65px;
-    margin-top: 20px;
-    line-height: 44px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.light-bg-sub {
-    color: rgb(34, 3, 31);
-    margin-top: 20px;
-    font-size: 24px;
-    line-height: 30px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.light-bg-text {
-    padding-top: 10px;
+.light-bg-btn {
+    color: #C5D86D;
+    background-color: #141B0B;
     font-size: 18px;
-    line-height: 25px;
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
+    font-weight: bold;
 
-.long-story {
-    color: rgb(204, 118, 161);
-    background-color: rgb(34, 3, 31);
-    border: 1px rgb(0, 0, 0);
+    border: 1px #171E0E;
     border-radius: 20px;
-    font-size: 18px;
+    padding: 12px;
 }
-.w-button {
-    color: rgb(255, 255, 255);
-    line-height: inherit;
-    cursor: pointer;
-    background-color: rgb(56, 152, 236);
-    border: 0px;
-    border-radius: 0px;
-    padding: 9px 15px;
-    text-decoration: none;
-    display: inline-block;
+
+
+.project-intro {
+    padding-bottom: 50px;
 }
 
 .project-spotlight {
-    color: rgb(242, 183, 198);
-    background-color: rgb(34, 3, 31);
-    padding-top: 100px;
-    padding-bottom: 100px;
-    box-sizing: border-box;
+    background-color: #171E0E;
 }
-
-.dark-bg-title {
-    color: rgb(204, 118, 161);
+ .grid-container {
     padding-top: 0px;
-    padding-bottom: 10px;
-    font-size: 65px;
-    margin-top: 20px;
-    line-height: 44px;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.grid-container {
-    padding-top: 20px;
     padding-bottom: 40px;
 }
-
+.card {
+    height: 350px;
+}
+.card-body {
+    background-color: #CCD69F;
+    color: #171E0E;
+    text-align: center;
+    position: relative;
+}
+.spotlight-text {
+    padding-top: 0px;
+    padding-bottom: 50px;
+}
+/* 
 .grid {
     gap: 16px;
     grid-template-rows: auto;
@@ -207,11 +229,32 @@ p {
     grid-auto-columns: 1fr;
     padding-top: 0px;
     display: grid;
-}
-
-.card {
+} */
+/* .card {
     text-align: center;
     padding-top: 20px;
     padding-bottom: 0px;
+} */
+/* .image-container {
+    padding-left: 60px;
+} */
+
+.dark-bg-btn {
+    color: #141B0B;
+    background-color: #C5D86D;
+    font-size: 18px;
+    font-weight: bold;
+
+    border: 1px #141B0B;
+    border-radius: 20px;
+    padding: 12px;
 }
+
+.card-btn {
+    position: absolute;
+    align-items: center;
+    transform: translate(-50%);
+    top: 110px;
+}
+
 
