--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@ html {
     }
 }
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;    
     font-size: 18px;
     line-height: 25px;
     color: #C5D86D;
 }
-
 section div {
     display: block;
     margin: 0;
@@ -20,8 +19,12 @@ section div {
 h1 {
     margin-top: 0;
 }
+h3 {
+    font-family: "Plus Jakarta Sans", sans-serif;
+}
 p {
     display: block;
+    font-family: Arial, sans-serif;    
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -35,10 +38,12 @@ p {
   }
 .navbar-brand {
     color: black;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .nav-link {
     color: black;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
 .container {
@@ -56,87 +61,57 @@ p {
     padding-bottom: 100px;
 }
 
-/* .col-6 {
-    width: 50%;
-} */
-/* .col {
-    float: left;
-    width: 100%;
-    min-height: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
-} */
-/* .row::before, .row::after {
-    content: " ";
-    grid-area: 1 / 1 / 2 / 2;
-    display: table;
-}
 
-.row::after {
-    clear: both;
-}
 
-.row::before, .row::after {
-    content: " ";
-    grid-area: 1 / 1 / 2 / 2;
-    display: table;
-} */
-
-.dark-bg-title {
-    color: #C5D86D;
-    font-size: 65px;
-    line-height: 44px;
-    font-weight: bold;
-
-    padding-bottom: 10px;
-    
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-.dark-bg-sub {
-    color: #CCD69F;
-    font-family: Arial, sans-serif;
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: bold;
-    
-    margin-top: 20px;
-}
-.dark-bg-text {
-    color: #CCD69F;
-    font-size: 18px;
-}
-.light-bg-title {
-    color: #141B0B;
+.section-title { 
+    font-family: "DM Serif Display", serif;
     font-size: 65px;
     line-height: 44px;
     font-weight: bold;
     line-height:70px;
-
     padding-bottom: 10px;
-
+    
     margin-top: 20px;
     margin-bottom: 10px;
 }
-.light-bg-sub {
+.dark-bg-title {
+    color: #C5D86D;
+}
+.light-bg-title {
     color: #141B0B;
+}
+
+
+
+.section-sub {
+    font-family: "Plus Jakarta Sans", sans-serif;    
     font-size: 24px;
     line-height: 30px;
     font-weight: bold;
+}
+.dark-bg-sub {
+    color: #CCD69F;
+}
+.light-bg-sub {
+    color: #141B0B;
+}
 
-    margin-top: 20px;
+.text {
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    line-height: 25px;
+}
+.dark-bg-text {
+    color: #CCD69F;
 }
 .light-bg-text {
     color: #141B0B;
-    font-size: 18px;
-    line-height: 25px;
-
+}
+.text-spacing {
     padding-top: 10px;
-
     margin-top: 0px;
     margin-bottom: 10px;
 }
-
 
 
 .intro {
@@ -144,15 +119,23 @@ p {
 }
 #greeting {
     color: #C5D86D;
-    font-size: 88px;
-    line-height: 100px;
+    font-family: "DM Serif Display", serif;
+    font-size: 110px;
+    line-height: 105px;
     font-weight: bold;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 
     margin-top: 50px;
     margin-bottom: 10px;
 
     padding-top: 100px;
+}
+.taglines {
+    line-height: 100px;
+    margin-bottom: 20px;
+}
+.tagline-spacing {
+    margin-top: 5px;
 }
 .left-intro {
     margin-left: 80px;
@@ -198,9 +181,8 @@ p {
 
 
 .project-intro {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
-
 .project-spotlight {
     background-color: #171E0E;
 }
@@ -220,27 +202,11 @@ p {
 .spotlight-text {
     padding-top: 0px;
     padding-bottom: 50px;
-}
-/* 
-.grid {
-    gap: 16px;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-columns: 1fr;
-    padding-top: 0px;
-    display: grid;
-} */
-/* .card {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 0px;
-} */
-/* .image-container {
-    padding-left: 60px;
-} */
 
+}
 .dark-bg-btn {
     color: #141B0B;
+    font-family: Arial, sans-serif;
     background-color: #C5D86D;
     font-size: 18px;
     font-weight: bold;
@@ -249,7 +215,6 @@ p {
     border-radius: 20px;
     padding: 12px;
 }
-
 .card-btn {
     position: absolute;
     align-items: center;
