--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ p {
     margin-bottom: 10px;
 }
 
+img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
 .custom-bg-nav {
     background-color: #C5D86D !important;
   }
@@ -60,7 +65,10 @@ p {
     padding-top: 100px;
     padding-bottom: 100px;
 }
-
+.web-links:link {
+    text-decoration: none;
+    color:black;
+}
 
 
 .section-title { 
@@ -114,7 +122,7 @@ p {
 }
 
 
-.intro {
+.dark-bg-section {
     background-color: #141B0B;
 }
 #greeting {
@@ -148,24 +156,23 @@ p {
     overflow-clip-margin: content-box;
     overflow: clip;
 }
-#photo {
+.photo {
     vertical-align: middle;
     padding-left: 60px;
     position: relative;
     bottom: 50px;
     display: inline-block;
-
-    max-width: 100%;
-    width: 475px;
-    height: 800px;
-
-    overflow-clip-margin: content-box;
     overflow: clip;
 }
 
+/* #headshot {
+    max-width: 100%;
+    max-height: 100%;
+} */
 
 
-.education {
+
+.light-bg-section {
     background-color: #CCD69F;
 }
 .light-bg-btn {
@@ -191,7 +198,7 @@ p {
     padding-bottom: 40px;
 }
 .card {
-    height: 350px;
+    height: 470px;
 }
 .card-body {
     background-color: #CCD69F;
@@ -219,7 +226,33 @@ p {
     position: absolute;
     align-items: center;
     transform: translate(-50%);
-    top: 110px;
+    top: 195px;
 }
 
 
+
+.before-after {
+    vertical-align: middle;
+    position: relative;
+    display: inline-block;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.proj-img {
+    vertical-align: middle;
+    border-style: none;
+}
+
+.img-spacing {
+    padding-bottom: 0;
+}
+
+.proj-page-spacing {
+    padding-top: 25px;
+    padding-bottom: 30px;
+}
+
+.text-container {
+    padding-top: 25px;
+    padding-bottom: 0px;
+}
