--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Arial, sans-serif;    
     font-size: 18px;
     line-height: 25px;
-    color: #C5D86D;
+    color: #F0F4FF;
 }
 section div {
     display: block;
@@ -39,11 +39,14 @@ img {
 }
 
 .custom-bg-nav {
-    background-color: #C5D86D !important;
+    background-color: #c2c2ff !important;
   }
 .navbar-brand {
     color: black;
     font-family: "Plus Jakarta Sans", sans-serif;
+}
+.navbar-toggler-icon {
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png");
 }
 
 .nav-link {
@@ -63,11 +66,11 @@ img {
 }
 .section-spacing {
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 180px;
 }
 .web-links:link {
     text-decoration: none;
-    color:black;
+    color:#2A3549;
 }
 
 
@@ -83,10 +86,10 @@ img {
     margin-bottom: 10px;
 }
 .dark-bg-title {
-    color: #C5D86D;
+    color: #c2c2ff;
 }
 .light-bg-title {
-    color: #141B0B;
+    color: #2A3549;
 }
 
 
@@ -98,10 +101,10 @@ img {
     font-weight: bold;
 }
 .dark-bg-sub {
-    color: #CCD69F;
+    color: #E1E8FF;
 }
 .light-bg-sub {
-    color: #141B0B;
+    color: #2A3549;
 }
 
 .text {
@@ -110,10 +113,10 @@ img {
     line-height: 25px;
 }
 .dark-bg-text {
-    color: #CCD69F;
+    color: #F0F4FF;
 }
 .light-bg-text {
-    color: #141B0B;
+    color: #2A3549;
 }
 .text-spacing {
     padding-top: 10px;
@@ -122,21 +125,25 @@ img {
 }
 
 
+.button-spacing {
+    margin-top: 45px;
+}
+
 .dark-bg-section {
-    background-color: #141B0B;
+    background-color: #2A3549;
 }
 #greeting {
-    color: #C5D86D;
+    color: #c2c2ff;
     font-family: "DM Serif Display", serif;
-    font-size: 110px;
+    font-size: 120px;
     line-height: 105px;
     font-weight: bold;
     letter-spacing: 2px;
 
-    margin-top: 50px;
+    margin-top: 150px;
     margin-bottom: 10px;
 
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .taglines {
     line-height: 100px;
@@ -145,9 +152,7 @@ img {
 .tagline-spacing {
     margin-top: 5px;
 }
-.left-intro {
-    margin-left: 80px;
-}
+
 .right-intro {
     box-sizing: border-box;
     vertical-align: middle;
@@ -155,29 +160,22 @@ img {
     display: inline-block;
     overflow-clip-margin: content-box;
     overflow: clip;
+    margin-left: 40px;
 }
 .photo {
     vertical-align: middle;
-    padding-left: 60px;
     position: relative;
-    bottom: 50px;
     display: inline-block;
     overflow: clip;
+    height: 625px;
 }
-
-/* #headshot {
-    max-width: 100%;
-    max-height: 100%;
-} */
-
-
 
 .light-bg-section {
-    background-color: #CCD69F;
+    background-color: #f0f4ff;
 }
 .light-bg-btn {
-    color: #C5D86D;
-    background-color: #141B0B;
+    color: #c2c2ff;
+    background-color: #2A3549;
     font-size: 18px;
     font-weight: bold;
 
@@ -191,18 +189,22 @@ img {
     padding-bottom: 30px;
 }
 .project-spotlight {
-    background-color: #171E0E;
+    background-color: #2A3549;
 }
  .grid-container {
     padding-top: 0px;
     padding-bottom: 40px;
 }
-.card {
-    height: 470px;
+.card-home {
+    height: 475px;
+}
+.card-img-top {
+    height: 195px;
+    object-fit: cover;
 }
 .card-body {
-    background-color: #CCD69F;
-    color: #171E0E;
+    background-color: #E1E8FF;
+    color: #2A3549;
     text-align: center;
     position: relative;
 }
@@ -212,13 +214,13 @@ img {
 
 }
 .dark-bg-btn {
-    color: #141B0B;
+    color: #2A3549;
     font-family: Arial, sans-serif;
-    background-color: #C5D86D;
+    background-color: #c2c2ff;
     font-size: 18px;
     font-weight: bold;
 
-    border: 1px #141B0B;
+    border: 1px #2A3549;
     border-radius: 20px;
     padding: 12px;
 }
